Dynamic-App-with-Kubernetes-and-EKS/kubernetes/manifest-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: surveys
spec:
  ports:
  - name: backend-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    role: backend
